syntax = "proto3";

package supersubtitles.v1;

option go_package = "github.com/Belphemur/SuperSubtitles/api/proto/v1;v1";

import "google/protobuf/timestamp.proto";

// SuperSubtitlesService provides access to TV show and subtitle information
service SuperSubtitlesService {
  // GetShowList retrieves all available TV shows
  rpc GetShowList(GetShowListRequest) returns (GetShowListResponse);

  // GetSubtitles retrieves all subtitles for a specific show
  rpc GetSubtitles(GetSubtitlesRequest) returns (GetSubtitlesResponse);

  // GetShowSubtitles retrieves shows with their subtitles and third-party IDs
  rpc GetShowSubtitles(GetShowSubtitlesRequest) returns (GetShowSubtitlesResponse);

  // CheckForUpdates checks if there are new subtitles available since a given content ID
  rpc CheckForUpdates(CheckForUpdatesRequest) returns (CheckForUpdatesResponse);

  // DownloadSubtitle downloads a specific subtitle file
  rpc DownloadSubtitle(DownloadSubtitleRequest) returns (DownloadSubtitleResponse);

  // GetRecentSubtitles retrieves recently uploaded subtitles
  rpc GetRecentSubtitles(GetRecentSubtitlesRequest) returns (GetRecentSubtitlesResponse);
}

// Show represents a TV show with basic information
message Show {
  string name = 1;
  uint64 id = 2;
  uint32 year = 3;
  string image_url = 4;
}

// ThirdPartyIds represents identifiers from various third-party services
message ThirdPartyIds {
  string imdb_id = 1;   // IMDB identifier
  uint64 tvdb_id = 2;    // TVDB identifier
  uint64 tv_maze_id = 3; // TVMaze identifier
  uint64 trakt_id = 4;   // Trakt identifier
}

// Quality represents the video quality of a subtitle
enum Quality {
  QUALITY_UNSPECIFIED = 0;
  QUALITY_360P = 1;
  QUALITY_480P = 2;
  QUALITY_720P = 3;
  QUALITY_1080P = 4;
  QUALITY_2160P = 5; // 4K
}

// Subtitle represents a normalized subtitle
message Subtitle {
  uint64 id = 1;
  uint64 show_id = 2;
  string show_name = 3;
  string name = 4;
  string language = 5;
  uint32 season = 6;
  uint32 episode = 7;
  string filename = 8;
  string download_url = 9;
  string uploader = 10;
  google.protobuf.Timestamp uploaded_at = 11;
  repeated Quality qualities = 12;
  repeated string release_groups = 13;
  string release = 14;
  bool is_season_pack = 15;
}

// SubtitleCollection represents a collection of subtitles for a show
message SubtitleCollection {
  string show_name = 1;
  repeated Subtitle subtitles = 2;
  uint64 total = 3;
}

// ShowSubtitles represents a TV show with its third-party IDs and subtitles
message ShowSubtitles {
  Show show = 1;
  ThirdPartyIds third_party_ids = 2;
  SubtitleCollection subtitle_collection = 3;
}

// GetShowListRequest requests the list of all available shows
message GetShowListRequest {}

// GetShowListResponse contains the list of shows
message GetShowListResponse {
  repeated Show shows = 1;
}

// GetSubtitlesRequest requests subtitles for a specific show
message GetSubtitlesRequest {
  uint64 show_id = 1;
}

// GetSubtitlesResponse contains the subtitle collection for a show
message GetSubtitlesResponse {
  SubtitleCollection subtitle_collection = 1;
}

// GetShowSubtitlesRequest requests shows with their subtitles and third-party IDs
message GetShowSubtitlesRequest {
  repeated Show shows = 1;
}

// GetShowSubtitlesResponse contains shows with subtitles and third-party IDs
message GetShowSubtitlesResponse {
  repeated ShowSubtitles show_subtitles = 1;
}

// CheckForUpdatesRequest checks for new content since a given content ID
message CheckForUpdatesRequest {
  string content_id = 1;
}

// CheckForUpdatesResponse contains update availability information
message CheckForUpdatesResponse {
  uint64 film_count = 1;
  uint64 series_count = 2;
  bool has_updates = 3;
}

// DownloadSubtitleRequest requests a subtitle download
message DownloadSubtitleRequest {
  string download_url = 1;
  string subtitle_id = 2;
  uint32 episode = 3; // Episode number to extract from season pack (0 = download entire file)
}

// DownloadSubtitleResponse contains the downloaded subtitle data
message DownloadSubtitleResponse {
  string filename = 1;
  bytes content = 2;
  string content_type = 3;
}

// GetRecentSubtitlesRequest requests recently uploaded subtitles
message GetRecentSubtitlesRequest {
  uint64 since_id = 1;
}

// GetRecentSubtitlesResponse contains recently uploaded subtitles
message GetRecentSubtitlesResponse {
  repeated ShowSubtitles show_subtitles = 1;
}
